--- a/lista.html
+++ b/lista.html
@@ -8,6 +8,13 @@
 </head>
 <body text-align:center>
 
+    <ul>
+  <li><a href="default.asp">Home</a></li>
+  <li><a href="news.asp">News</a></li>
+  <li><a href="contact.asp">Contact</a></li>
+  <li><a href="about.asp">About</a></li>
+</ul>
+
     
     <h1 style="color: brown;">máj kedvenc hámbörgör ikszdé</h1>
     <ul style="color: aliceblue;">
