--- a/lista.html
+++ b/lista.html
@@ -9,7 +9,7 @@
 <body text-align:center>
 
     <ul>
-  <li><a href="default.asp">Home</a></li>
+  <li><<a href="https://www.w3schools.com/" target="_blank">Visit W3Schools!</a>>Home</a></li>
   <li><a href="news.asp">News</a></li>
   <li><a href="contact.asp">Contact</a></li>
   <li><a href="about.asp">About</a></li>
